# chess_knight

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  ChessKnigth.cpp  ChessKnigth.h  main.cpp
test/: CMakeLists.txt  chess_test.cpp
